name chnage update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-navbutton-color" content="#7C5BFF">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#7C5BFF">
-    <title>RackNerd Black Friday DEALS!</title>
+    <title>Ambition Host Black Friday DEALS!</title>
     <script src="/javascript/js1.js"></script>
     <link rel="icon" href="assets/images/favicon.png">
     <!-- Styles started -->
@@ -52,13 +52,13 @@
         <div class="container-fluid d-flex align-items-center">
             <div class="logo-bk align-self-center">
                 <a href="index.html" class="obj">
-                    <img src="https://www.racknerd.com/BlackFriday/assets/images/logo.svg" alt="logo">
+                    <img src="logo.webp" alt="logo" style="background-color: azure; width: 120px; height: fit-content;">
                 </a>
             </div>
             <nav class="d-none d-xl-flex ml-auto">
                 <ul class="d-flex">
                     <li class="current_page_item"><a href="#plan1">Linux VPS</a></li>
-                    <li><a href="#ryzen">Ryzen NVMe VPS</a></li>
+                    <li><a href="#ryzen">  VPS</a></li>
                     <li><a href="#dedicated">Dedicated Servers</a></li>
                     <li><a href="#shared">Shared Hosting</a></li>
                     <li><a href="#reseller">Reseller Hosting</a></li>
@@ -318,45 +318,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-xl-3 col-sm-6 mgb-7">
-                                <div class="bk-server-details">
-                                    <div class="outer">
-
-                                        <div class="inner-block">
-                                            <div class="count"><span>5</span></div>
-                                            <h3 class="h3">4.5GB KVM VPS</h3>
-                                            <div class="text-center mgb-2">
-                                                <h4 class="h4">DEPLOY IN:</h4>
-                                                <p>LOS ANGELES DC-02, SAN JOSE, SEATTLE, DALLAS, CHICAGO,
-                                                    NEW YORK, ATLANTA,
-                                                    OR ASHBURN</p>
-                                            </div>
-                                            <div class="price">
-                                                <a href="#796"><span
-                                                        class="big">$52</span><span class="small">.49</span><small>
-                                                        <font size="3">/
-                                                            year
-                                                    </small></font></a>
-                                            </div>
-                                            <ul>
-                                                <li><strong>4 v</strong>CPU Cores</li>
-                                                <li><strong>115 GB</strong> Pure SSD Storage</li>
-                                                <li><strong>4.5 GB</strong> RAM</li>
-                                                <li><strong>10,000 GB</strong> Monthly Transfer</li>
-                                                <li><strong>1 Gbps</strong> Network Port</li>
-                                                <li><strong>Full</strong> Root Admin Access</li>
-                                                <li><strong>1</strong> Dedicated IPv4 Address</li>
-                                                <li><strong>KVM</strong> / SolusVM Control Panel</li>
-                                                <li><strong>FREE</strong> Clientexec License</li>
-                                                <li>Available in: LAX, SJC, SEA, DAL, CHI, ATL, NY, ASH</li>
-                                                <li>ONLY $52.49/YEAR!</li>
-                                            </ul>
-                                            <a href="#796"
-                                                class="btn"><span>Order Now</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="pdt-4 text-center">
                             <button type="button" class="btn mx-auto py-4 open-all-box d-none d-xl-block"><span>REVEAL
@@ -687,7 +649,7 @@
                                 </h2>
                                 <p>Select your ideal shared hosting plan below, free migrations included from your
                                     current hosting provider at no extra cost (provided they also use cPanel).
-                                    RackNerd’s shared hosting offers stands out, not just for its use of the desirable
+                                    Ambition Host’s shared hosting offers stands out, not just for its use of the desirable
                                     cPanel control panel, but also for its integration with MailChannels. This ensures
                                     improved email deliverability to various email services, a feature we offer without
                                     any additional fees. Shared hosting plans are available to deploy in multiple
@@ -836,7 +798,7 @@
                                 <h2 class="h2">Reseller Hosting with cPanel/WHM - INSTANTLY SETUP!</h2>
                                 <p>Why compromise with reseller hosting services that use lesser-known control panels
                                     and fall short on quality? Your clients are already familiar and comfortable with
-                                    cPanel, the industry-standard control panel. At RackNerd, we understand this and
+                                    cPanel, the industry-standard control panel. At Ambition Host, we understand this and
                                     provide our reseller hosting accounts on the cPanel/WHM platform. Boost your
                                     conversions and revenue effortlessly! Our cPanel & WHM-powered reseller hosting
                                     accounts enable you to create and sell web hosting services with ease, no technical
@@ -983,7 +945,7 @@
         <section class="spacing">
             <div class="container-fluid">
                 <header class="mgb-lg-5 mgb-3 text-center">
-                    <h2 class="h2">Why Choose RackNerd ?</h2>
+                    <h2 class="h2">Why Choose Ambition Host ?</h2>
                 </header>
                 <div class="row mgb--2 gutter-xl-20">
                     <div class="col-lg-6 mgb-2">
@@ -1042,7 +1004,7 @@
                                 </figure>
                                 <div class="content-bk">
                                     <h3 class="h3">24x7 Around The Clock Support</h3>
-                                    <p>RackNerd is renowned for providing excellent customer service that you can rely
+                                    <p>Ambition Host is renowned for providing excellent customer service that you can rely
                                         on. In fact, our average ticket response time is just under 10 minutes!
                                         Competent, friendly, and consistently fast support, that is truly available 24
                                         hours a day.</p>
@@ -1061,7 +1023,7 @@
                         <figure class="mgb-sm-3 mgb-2">
                             <img src="https://www.racknerd.com/BlackFriday/assets/images/logo.svg" alt="footer logo" class="logo">
                         </figure>
-                        <p>© 2023 RackNerd, All Rights Reserved.</p>
+                        <p>© 2024 Ambition Host, All Rights Reserved.</p>
                     </div>
                     <div class="col-xl-4 mgb-3">
                         <div class="width-max-content ms-xl-auto">
