--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
 
                                 </a>
                                 <a href="#" class="connect">
-                                        <img src="https://ambitionhost.in/svg/dicover.svg" alt="">
+                                    <img src="https://ambitionhost.in/svg/dicover.svg" alt="">
 
                                 </a>
                                 <a href="#" class="connect">
@@ -1058,7 +1058,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                 </div>
             </div>
         </footer>
@@ -1067,9 +1067,11 @@
     </div>
     <!-- Wrapper Ended -->
     <!-- Scripts started -->
-    <script src="assets/vendor/jquery/jquery-3.5.1.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="javascript/app.js"></script>
     <!-- Scripts ended -->
 </body>
 <!--Start of Tawk.to Script-->
