--- a/index.html
+++ b/index.html
@@ -745,12 +745,7 @@
                                             <li><strong>KernelCare</strong> Enabled (maximum security/uptime)</li>
                                             <li><strong>cPanel</strong> Control Panel</li>
                                             <li><strong>Softaculous</strong> Script Installer</li>
-                                            <li><strong>LiteSpeed</strong> Web Server</li>
-                                            <li><strong>Free</strong> Offsite Daily Backups (JetBackup)</li>
-                                            <li><strong>Free</strong> Clientexec License</li>
-                                            <li><strong>MailChannels</strong> Hybrid - Premium Email Delivery</li>
-                                            <li>Available in Multiple Locations (US, EU, Asia)</li>
-                                        </ul>
+                                      </ul>
                                         <a href="#802" class="btn"><span>Order
                                                 Now</span></a>
                                     </div>
@@ -759,7 +754,7 @@
                         </div>
                     </div>
                     <div class="pdt-4 text-center">
-                        <button type="button" class="btn mx-auto py-4 open-all-box d-none d-xl-block"><span>REVEAL ALL
+                        <button type="button" class="view-all-btn btn mx-auto py-4 open-all-box d-none d-xl-block"><span>REVEAL ALL
                                 DEALS</span></button>
                     </div>
                 </div>
