--- a/index.html
+++ b/index.html
@@ -745,10 +745,10 @@
                                             <li><strong>KernelCare</strong> Enabled (maximum security/uptime)</li>
                                             <li><strong>cPanel</strong> Control Panel</li>
                                             <li><strong>Softaculous</strong> Script Installer</li>
-                                      </ul>
+                                        </ul>
                                         <a href="#802" class="btn"><span>Order
-                                                Now</span></a>
-                                    </div>
+                                            Now</span></a>
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -987,7 +987,7 @@
             </div>
         </section>
         <!-- start Footer -->
-        <footer class="bk-footer">
+        <footer class="bk-footer shadow">
             <div class="container-fluid">
                 <div class="row mgb--3">
                     <div class="col-xl-4 col-md-6">
